--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://david-stereonaut.github.io/ice-cream-store",
+  "homepage": "http://david-stereonaut.github.io/ice-cream-store/",
   "name": "ice-cream-store",
   "version": "0.1.0",
   "private": true,
